[tool.poetry]
name = "lit-data"
version = "0.1.0"
description = ""
authors = ["Kornelijus TvarijanaviÄius <kornelijus@tvaria.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/Kornelijus/lit-data"
repository = "https://github.com/Kornelijus/lit-data"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
