[tool.poetry]
name = "lit-data"
version = "0.1.0"
description = "Library to access Lithuanian open data from various official sources"
authors = ["Kornelijus Tvarijanavičius <kornelijus@tvaria.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/Kornelijus/lit-data"
repository = "https://github.com/Kornelijus/lit-data"
classifiers = ["Development Status :: 1 - Planning"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
vcrpy = "^4.1.1"
responses = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"
pytest-recording = "^0.12.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'

# Maybe in a few decades flake8 will support PEP 518
[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
addopts = ["--record-mode", "new_episodes", "--cov", "lit_data"]
